--- a/views/login.html
+++ b/views/login.html
@@ -83,15 +83,15 @@
 
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#registration" role="tab" data-toggle="tab"> Registration </a>
+                        <a class="nav-link" href="#registration" role="tab" data-toggle="tab"> Registration </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#login" role="tab" data-toggle="tab">Login</a>
+                        <a class="nav-link active" href="#login" role="tab" data-toggle="tab">Login</a>
                     </li>
 
                 </ul>
                 <!-- Schdule Day 1 -->
-                <div role="tabpanel" class="col-lg-7 tab-pane fade show active" id="registration" style="background-color: #0e1735;">
+                <div role="tabpanel" class="col-lg-7 tab-pane fade" id="registration" style="background-color: #0e1735;">
 
                     <div id="error"></div>
                     <form class="form-horizontal" action="" method="post">
@@ -191,7 +191,7 @@
                 <!-- End Schdule Day 1 -->
 
                 <!-- Schdule Day 2 -->
-                <div role="tabpanel" class="col-lg-7  tab-pane fade" id="login" style="background-color: #0e1735;" align="center">
+                <div role="tabpanel" class="col-lg-7  tab-pane fade show active" id="login" style="background-color: #0e1735;" align="center">
                     <div id="error1"></div>
                     <div class="form-group">
                         <label class="control-label col-sm-2" for="email" style="color:white">Email:</label>
