--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -309,7 +309,7 @@ Hotels Section
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="../assets/images/nitrlogo.png" alt="TheEvenet">
+            <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="../assets/images/nitrlogo.png" alt="NITR Logo"> </a>  
             <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate
               cupiditate debitis accusamus repellat cumque.
             </p>
