--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -52,27 +52,26 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../index.html#about">About</a></li>
+          <!-- <li><a href="../index.html#about">About</a></li> -->
           <li class="dropdown menu-active">
 
             <a class="dropbtn dropping">Events</a>
             <div class="dropdown-content">
-              <a href="#EventsSection">Event Schedule</a>
-                <a href="#flagships">Flagship Events</a>
-                <a href="#events">Events</a>
-                <a href="#workshops">Workshops</a>
-                <a href="#paidworkshops">Workshops (Paid)</a>
-                <a href="#exhibitions">Exhibitions</a>
-                <a href="#cultural">Cultural </a>
+              <a href="#flagships">Flagship Events</a>
+              <a href="#events">Events</a>
+              <a href="#workshops">Workshops</a>
+              <a href="#paidworkshops">Workshops (Paid)</a>
+              <a href="#exhibitions">Exhibitions</a>
+              <a href="#cultural">Cultural</a>
             </div>
 
           </li>
-          <li><a href="ISRpage.html">Innovision Social Regime</a></li>
+          <li><a href="ISRpage.html">I.S.R</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
           <!-- <li><a href="#hotels">Hotels</a></li>
                   <li><a href="#gallery">Gallery</a></li> -->
           <li><a href="sponsor.html">Sponsors</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <!-- <li><a href="#contact">Contact</a></li> -->
           <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
         </ul>
       </nav>
@@ -115,7 +114,7 @@
                     <!-- Schdule Day 1 -->
                     <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
-                        
+
                 <!--    <div class="row schedule-item">
                             <div class="col-md-2"><time>09:30 AM</time></div>
                             <div class="col-md-10">
@@ -123,7 +122,7 @@
                                 <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
                             </div>
                         </div> -->
-                        
+
                         <!-- <a href="">
                         <div class="row schedule-item">
                             <div class="col-md-2"><time>10:00 AM</time></div>
@@ -137,21 +136,21 @@
                         </div>
                         </a> -->
 
-                        
+
                     </div>
                     <!-- End Schdule Day 1 -->
 
                     <!-- Schdule Day 2 -->
                     <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
-                        
+
                     </div>
                     <!-- End Schdule Day 2 -->
 
                     <!-- Schdule Day 3 -->
                     <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
-                        
+
                     </div>
                     <!-- End Schdule Day 2 -->
 
@@ -187,13 +186,13 @@
                            <!--  <a href="event-details.html">
                             <div class="speaker">
                                 <img src="../assets/images/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
-                            </div> 
+                            </div>
                             </a> -->
                         <!-- </div> -->
 
                     <!-- </div> -->
                 </div>
- 
+
 
             <h3>Workshops</h3>
 
@@ -206,21 +205,21 @@
                 <div id="paidworkshops">
 
                 </div>
-           
-                                
+
+
 
             <h3>Exhibitions</h3>
-                
+
                 <div id="exhibitions">
 
                 </div>
-            
+
               <h3>Cultural</h3>
-                
+
                 <div id="cultural">
 
                 </div>
-                
+
             </div>
 
         </section>
