--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -45,8 +45,8 @@
 
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
-        <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-        <h1><a href="#main"><span>inno'19</span></a></h1>
+        <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
+        <h1><a href="#"><span>inno'19</span></a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -237,8 +237,10 @@
                 <div class="row">
 
                     <div class="col-lg-3 col-md-6 footer-info">
-                        <img src="../assets/images/logo.png" alt="TheEvenet">
-                        <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate
+                        <img src="../assets/images/inno_logo.png" alt="TheEvenet">
+                        <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et
+                            totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id
+                            quis. In inventore consequatur ad voluptate
                             cupiditate debitis accusamus repellat cumque.</p>
                     </div>
 
@@ -247,39 +249,56 @@
                         <ul>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
+                            <li><i class="fa fa-angle-right"></i> <a href="https://twitter.com/nitrourkela?s=17">NITR
+                                    Twitter</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
+                    <!-- <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+            </ul>
+          </div> -->
 
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h4>Contact Us</h4>
                         <p>
-                            A108 Adam Street <br> New York, NY 535022<br> United States <br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <b>Student Activity Center</b> <br>
+                            <strong>National Institute of Technology</strong> <br>
+                            <em>Sector 1, Rourkela - 769008</em> <br>
+                            <strong>Phone:</strong> +1 5589 55488 55 <br>
+                            <strong>Email:</strong> <a href="mailto:contactus@innonitr.com">contactus@innonitr.com</a>
+                            <br>
                         </p>
 
                         <div class="social-links">
-                            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://twitter.com/innonitr?lang=en" class="twitter"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/innonitr/" class="facebook"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/inno.nitr/" class="instagram"><i
+                                    class="fa fa-instagram"></i></a>
+                            <!-- <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
                         </div>
 
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-info">
+                        <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="../assets/images/nitrlogo.png"
+                                alt="NITR Logo"> </a>
+                        <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et
+                            totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id
+                            quis. In inventore consequatur ad voluptate
+                            cupiditate debitis accusamus repellat cumque.
+                        </p>
                     </div>
 
                 </div>
@@ -288,7 +307,7 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>TheEvent</strong>. All Rights Reserved
+                &copy; Copyright <strong>National Institute of Technology, Rourkela</strong>.
             </div>
             <div class="credits">
                 <!--
@@ -297,7 +316,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by <a href="#">Innovision Web Team</a>
             </div>
         </div>
     </footer>
