--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TheEvent - Bootstrap Event Template</title>
+    <title>Sponsers</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -30,33 +30,53 @@
 </head>
 
 <body>
+
+    <!--==========================
+  Header
+============================-->
     <header id="header">
         <div class="container">
 
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use a text logo -->
-                <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-                <a href="#intro" class="scrollto"><img src="../assets/images/logo.png" alt="" title=""></a>
+                <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="inno logo"
+                        title="Innovision'19"></a>
+                <h1><a href="#"><span>inno'19</span></a></h1>
             </div>
 
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="#intro">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#speakers">Speakers</a></li>
-                    <li><a href="#schedule">Schedule</a></li>
-                    <li><a href="#venue">Venue</a></li>
-                    <li><a href="#hotels">Hotels</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#supporters">Sponsors</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <!-- <li><a href="#about">About</a></li> -->
+                    <li class="dropdown">
+
+                        <a class="dropbtn dropping">Events</a>
+                        <div class="dropdown-content">
+                            <a href="eventsSection.html#EventsSection">Event Schedule</a>
+                            <a href="eventsSection.html#flagships">Flagship Events</a>
+                            <a href="eventsSection.html#events">Events</a>
+                            <a href="eventsSection.html#workshops">Workshops</a>
+                            <a href="eventsSection.html#paidworkshops">Workshops (Paid)</a>
+                            <a href="eventsSection.html#exhibitions">Exhibitions</a>
+                            <a href="eventsSection.html#cultural">Cultural</a>
+                        </div>
+
+                    </li>
+                    <li><a href="ISRpage.html">I.S.R</a></li>
+                    <li><a href="FAQ.html">FAQ</a></li>
+                    <!-- <li><a href="#hotels">Hotels</a></li>
+                  <li><a href="#gallery">Gallery</a></li> -->
+                    <li class="menu-active"><a href="sponsor.html">Sponsors</a></li>
+                    <!-- <li><a href="#contact">Contact</a></li> -->
+                    <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
                 </ul>
             </nav>
             <!-- #nav-menu-container -->
         </div>
     </header>
-    <!-- #header --><br>
+    <!-- #header -->
+
+    <br>
 
     <section id="supporters" class="section-with-bg wow fadeInUp">
         <div class="container">
@@ -345,20 +365,25 @@
 
                                       </div>
 
-                                  </section><br><br>
+    </section><br><br>
 
 
 
 
 
+    <!--==========================
+    Footer
+  ============================-->
     <footer id="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
 
                     <div class="col-lg-3 col-md-6 footer-info">
-                        <img src="../assets/images/logo.png" alt="TheEvenet">
-                        <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate
+                        <img src="../assets/images/inno_logo.png" alt="TheEvenet">
+                        <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et
+                            totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id
+                            quis. In inventore consequatur ad voluptate
                             cupiditate debitis accusamus repellat cumque.</p>
                     </div>
 
@@ -367,172 +392,94 @@
                         <ul>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
+                            <li><i class="fa fa-angle-right"></i> <a href="https://twitter.com/nitrourkela?s=17">NITR
+                                    Twitter</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
+                    <!-- <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+            </ul>
+          </div> -->
 
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h4>Contact Us</h4>
                         <p>
-                            A108 Adam Street <br> New York, NY 535022<br> United States <br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            <b>Student Activity Center</b> <br>
+                            <strong>National Institute of Technology</strong> <br>
+                            <em>Sector 1, Rourkela - 769008</em> <br>
+                            <strong>Phone:</strong> +1 5589 55488 55 <br>
+                            <strong>Email:</strong> <a href="mailto:contactus@innonitr.com">contactus@innonitr.com</a>
+                            <br>
                         </p>
 
                         <div class="social-links">
-                            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://twitter.com/innonitr?lang=en" class="twitter"><i
+                                    class="fa fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/innonitr/" class="facebook"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/inno.nitr/" class="instagram"><i
+                                    class="fa fa-instagram"></i></a>
+                            <!-- <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
                         </div>
 
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-info">
+                        <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="../assets/images/nitrlogo.png"
+                                alt="NITR Logo"> </a>
+                        <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et
+                            totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id
+                            quis. In inventore consequatur ad voluptate
+                            cupiditate debitis accusamus repellat cumque.
+                        </p>
                     </div>
 
                 </div>
             </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- JavaScript Libraries -->
-        <script src="../assets/lib/jquery/jquery.min.js"></script>
-        <script src="../assets/lib/jquery/jquery-migrate.min.js"></script>
-        <script src="../assets/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="../assets/lib/easing/easing.min.js"></script>
-        <script src="../assets/lib/superfish/hoverIntent.js"></script>
-        <script src="../assets/lib/superfish/superfish.min.js"></script>
-        <script src="../assets/lib/wow/wow.min.js"></script>
-        <script src="../assets/lib/venobox/venobox.min.js"></script>
-        <script src="../assets/lib/owlcarousel/owl.carousel.min.js"></script>
-
-        <!-- Contact Form JavaScript File -->
-        <script src="../assets/js/contactform.js"></script>
-
-        <!-- Template Main Javascript File -->
-        <script src="../assets/js/main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="container">
+            <div class="copyright">
+                &copy; Copyright <strong>National Institute of Technology, Rourkela</strong>.
+            </div>
+            <div class="credits">
+                <!--
+          All the links in the footer should remain intact.
+          You can delete the links only if you purchased the pro version.
+          Licensing information: https://bootstrapmade.com/license/
+          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
+        -->
+                Designed by <a href="#">Innovision Web Team</a>
+            </div>
+        </div>
+    </footer>
+    <!-- #footer -->
+
+
+    <!-- JavaScript Libraries -->
+    <script src="../assets/lib/jquery/jquery.min.js"></script>
+    <script src="../assets/lib/jquery/jquery-migrate.min.js"></script>
+    <script src="../assets/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/lib/easing/easing.min.js"></script>
+    <script src="../assets/lib/superfish/hoverIntent.js"></script>
+    <script src="../assets/lib/superfish/superfish.min.js"></script>
+    <script src="../assets/lib/wow/wow.min.js"></script>
+    <script src="../assets/lib/venobox/venobox.min.js"></script>
+    <script src="../assets/lib/owlcarousel/owl.carousel.min.js"></script>
+    <!-- Contact Form JavaScript File -->
+    <script src="../assets/js/contactform.js"></script>
+    <!-- Template Main Javascript File -->
+    <script src="../assets/js/main.js"></script>
 
 
 
