certificate in profile section, increased jwt expire time

--- a/views/profile.html
+++ b/views/profile.html
@@ -164,6 +164,9 @@
             -->
 
             </div>
+            <div class="container" id="user_certificate">
+               
+            </div>
         </div>
     </section>
 
