--- a/views/profile.html
+++ b/views/profile.html
@@ -93,8 +93,8 @@
                     <h3 style="color: white;" id="participant_college"></h3>
                     <h3 style="color: white;" id = "participant_id"></h3>
                     <br><br>
-                    <a href="#about" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
-                    <button  class="about-btn" style="background-color: black;" id = "ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
+                     <button  class="about-btn" style="background-color: black;" id = "pay_now"></button>
+                     <button  class="about-btn" style="background-color: black;" id = "ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
                 </div>
                 <div class="col-md-4">
                     <center>
@@ -283,6 +283,8 @@
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/ajax/user_profile_read.js"></script>
+    <script src="../assets/js/ajax/payment.js"></script>
+
 </body>
 
 </html>
