--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -64,7 +64,7 @@
         <ul class="nav-menu">
           <li><a href="../../index.html">Home</a></li>
           <li><a href="../../index.html#about">About</a></li>
-          <li class="dropdown menu-active">
+          <li class="dropdown">
 
             <a class="dropbtn dropping">Events</a>
             <div class="dropdown-content">
@@ -78,13 +78,13 @@
             </div>
 
           </li>
-          <li><a href="../ISRpage.html">Innovision Social Regime</a></li>
+          <li><a href="../ISRpage.html">I.S.R</a></li>
           <li><a href="../FAQ.html">FAQ</a></li>
           <!-- <li><a href="#hotels">Hotels</a></li>
                   <li><a href="#gallery">Gallery</a></li> -->
           <li><a href="../sponsor.html">Sponsors</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li class="buy-tickets"><a href="../login.html">Login/Register</a></li>
+          <!-- <li><a href="#contact">Contact</a></li> -->
+          <!-- <li class="buy-tickets"><a href="../login.html">Login/Register</a></li> -->
         </ul>
       </nav>
       <!-- #nav-menu-container -->
