--- a/views/profile.html
+++ b/views/profile.html
@@ -47,22 +47,36 @@
 
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use a text logo -->
-                <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-                <a href="#intro" class="scrollto"><img src="../assets/images/logo.png" alt="" title=""></a>
+                <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="inno logo"
+                        title="Innovision'19"></a>
+                <h1><a href="#"><span>inno'19</span></a></h1>
             </div>
 
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="#intro">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#speakers">Speakers</a></li>
-                    <li><a href="#schedule">Schedule</a></li>
-                    <li><a href="#venue">Venue</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <!-- <li><a href="#about">About</a></li> -->
+                    <li class="dropdown">
 
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#supporters">Sponsors</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                        <a class="dropbtn dropping">Events</a>
+                        <div class="dropdown-content">
+                            <a href="eventsSection.html#EventsSection">Event Schedule</a>
+                            <a href="eventsSection.html#flagships">Flagship Events</a>
+                            <a href="eventsSection.html#events">Events</a>
+                            <a href="eventsSection.html#workshops">Workshops</a>
+                            <a href="eventsSection.html#paidworkshops">Workshops (Paid)</a>
+                            <a href="eventsSection.html#exhibitions">Exhibitions</a>
+                            <a href="eventsSection.html#cultural">Cultural</a>
+                        </div>
 
+                    </li>
+                    <li><a href="ISRpage.html">I.S.R</a></li>
+                    <li><a href="FAQ.html">FAQ</a></li>
+                    <!-- <li><a href="#hotels">Hotels</a></li>
+                  <li><a href="#gallery">Gallery</a></li> -->
+                    <li><a href="sponsor.html">Sponsors</a></li>
+                    <!-- <li><a href="#contact">Contact</a></li> -->
+                    <!-- <li class="buy-tickets"><a href="login.html">Login/Register</a></li> -->
                 </ul>
             </nav>
             <!-- #nav-menu-container -->
@@ -93,7 +107,7 @@
                     <h3 style="color: white;" id="participant_college"></h3>
                     <h3 style="color: white;" id = "participant_id"></h3>
                     <br><br>
-                    <a href="#about" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
+                    <!-- <a href="#about" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br> -->
                     <button  class="about-btn" style="background-color: black;" id = "ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
                 </div>
                 <div class="col-md-4">
