--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -77,7 +77,7 @@
     <!-- #header -->
 
     <br>
-
+<!-- 
     <section id="supporters" class="section-with-bg wow fadeInUp">
         <div class="container">
             <div class="section-header">
@@ -179,8 +179,8 @@
 
         </div>
 
-    </section><br><br>
-    <section id="supporters" class="section-with-bg wow fadeInUp">
+    </section><br><br> -->
+  <!--   <section id="supporters" class="section-with-bg wow fadeInUp">
         <div class="container">
             <div class="section-header">
                 <h2>Our Media Partner</h2>
@@ -195,10 +195,10 @@
                 </div></center>
 
               </div>
-            </section>
+            </section> -->
             <br><br>
-
-                <section id="supporters" class="section-with-bg wow fadeInUp">
+<!-- 
+    <section id="supporters" class="section-with-bg wow fadeInUp">
                     <div class="container">
                         <div class="section-header">
                             <h2>Our Design Partner</h2>
@@ -215,8 +215,8 @@
 
 
                              </div>
-                      </section><br><br>
-                      <section id="supporters" class="section-with-bg wow fadeInUp">
+   </section><br><br> -->
+   <!--   <section id="supporters" class="section-with-bg wow fadeInUp">
                           <div class="container">
                               <div class="section-header">
                                   <h2>Our Photography Partner</h2>
@@ -233,8 +233,8 @@
 
 
                                    </div>
-                            </section><br><br>
-                            <section id="supporters" class="section-with-bg wow fadeInUp">
+    </section><br><br> -->
+   <!-- <section id="supporters" class="section-with-bg wow fadeInUp">
                                 <div class="container">
                                     <div class="section-header">
                                         <h2>Our Exhibition Partner</h2>
@@ -251,7 +251,7 @@
 
 
                                          </div>
-                                  </section><br><br>
+     </section><br><br> -->
                                   <section id="supporters" class="section-with-bg wow fadeInUp">
                                       <div class="container">
                                           <div class="section-header">
@@ -262,72 +262,72 @@
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/bhubaneswar buzz.png" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/bb.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/coca_cola.png" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/lic.jpg" class="img-fluid" alt="">
                                                   </div>
                                               </div>
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/facor.jpg" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/mayfair.jpg" class="img-fluid" alt="">
                                                   </div>
                                               </div>
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/ims.jpg" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/ovotees.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/Indian-Oil.jpg" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/radhika.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/mayfair.jpg" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/radio.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/mcl.jpg" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/rourkela tips.jpg" class="img-fluid" alt="">
                                                   </div>
                                               </div>
 
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/nalco.jpg" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/sambad.jpg" class="img-fluid" alt="">
                                                   </div>
                                               </div>
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/OdishaMining_MI.jpg" class="img-fluid" alt="">
+                                                      <img src="../assets/images//sponsors/sbi.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/ovotees.png" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/teeshood.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/Radhika-Regency.png" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/travel.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
                                               <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
-                                                      <img src="../assets/images/supporters/radio.png" class="img-fluid" alt="">
+                                                      <img src="../assets/images/sponsors/wisdomware.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
-                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                              <!-- <div class="col-lg-3 col-md-4 col-xs-6">
                                                   <div class="supporter-logo">
                                                       <img src="../assets/images/supporters/rourkelaTips.png" class="img-fluid" alt="">
                                                   </div>
@@ -357,7 +357,7 @@
                                                       <img src="../assets/images/supporters/wisdom.png" class="img-fluid" alt="">
                                                   </div>
                                               </div>
-
+ -->
 
 
 
