--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -72,7 +72,7 @@
                   <li><a href="#gallery">Gallery</a></li> -->
           <li><a href="sponsor.html">Sponsors</a></li>
           <!-- <li><a href="#contact">Contact</a></li> -->
-          <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
+          <li class="buy-tickets" id="log_btn"><a href="login.html">Login/Register</a></li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -341,6 +341,25 @@
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/ajax/eventFinal.js"></script>
+    <script src="../assets/js/ajax/check_login.js"></script>
+    <script>
+      var q = localStorage.getItem("token");
+      if(q)
+      {
+            $.ajax({
+                url:'../apis/user/auth/profile.php',
+                beforeSend: function(request){
+                    request.setRequestHeader('Authorization', 'Bearer ' + q);
+                },
+                type: 'get',
+                    success:function(response)
+                    {
+                   $("#log_btn").hide();
+              }
+            });
+      }
+    </script>
+
 </body>
 
 </html>
