--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -68,7 +68,7 @@
                   <li><a href="#gallery">Gallery</a></li> -->
                     <li class="menu-active"><a href="sponsor.html">Sponsors</a></li>
                     <!-- <li><a href="#contact">Contact</a></li> -->
-                    <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
+                    <li class="buy-tickets" id="log_btn"><a href="login.html">Login/Register</a></li>
                 </ul>
             </nav>
             <!-- #nav-menu-container -->
@@ -480,8 +480,23 @@
     <script src="../assets/js/contactform.js"></script>
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
-
-
+    <script>
+      var q = localStorage.getItem("token");
+      if(q)
+      {
+            $.ajax({
+                url:'../apis/user/auth/profile.php',
+                beforeSend: function(request){
+                    request.setRequestHeader('Authorization', 'Bearer ' + q);
+                },
+                type: 'get',
+                    success:function(response)
+                    {
+                   $("#log_btn").hide();
+              }
+            });
+      }
+    </script>
 
 </body>
 
