--- a/views/FAQ.html
+++ b/views/FAQ.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="../assets/imagesfavicon.png" rel="icon">
+    <link href="../assets/images/Innovision_Logo.ico" rel="icon">
     <link href="../assets/imagesapple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -92,11 +92,11 @@
 
                         <li>
                             <a data-toggle="collapse" class="collapsed" href="#faq1">When is
-                            INNOVISION 18? <i class="fa fa-minus-circle"></i></a>
+                            INNOVISION'19? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq1" class="collapse" data-parent="#faq-list">
                                 <p>
-                                     Ans. INNOVISION,The annual techno-management festival of NIT Rourkela,will be held from 2nd
-                            to 4th of November.
+                                     Ans. INNOVISION,The annual techno-management festival of NIT Rourkela, will be held from 1st
+                            to 3rd of November.
 
                                 </p>
                             </div>
@@ -104,7 +104,7 @@
 
                         <li>
                             <a data-toggle="collapse" href="#faq2" class="collapsed">How to
-                            register for INNOVISION 18? <i class="fa fa-minus-circle"></i></a>
+                            register for INNOVISION'19? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq2" class="collapse" data-parent="#faq-list">
                                 <p>
                                     Ans. Please go to sign up option for registration
@@ -132,8 +132,7 @@
                                     Ans. Yes, accommodation will be provided to the participants in the various halls of
                             residences located within our campus.
                             After registering at our desk, our hospitality team would guide the participants to their
-                            allotted
-                            halls.
+                            allotted halls.
 
                                 </p>
                             </div>
