--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ISR - Innovision'19</title>
+  <title>Innovision Social Regime</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="../assets/images/favicon.png" rel="icon">
+  <link href="../assets/images/Innovision_Logo.ico" rel="icon">
   <link href="../assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
