--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicons -->
-    <link href="../assets/images/favicon.png" rel="icon">
+    <link href="../assets/images/Innovision_Logo.ico" rel="icon">
     <link href="../assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -90,8 +90,6 @@
 
     <section id="signin_id" class="section-with-bg">
         <div class="container wow fadeInUp">
-
-
 
             <div class="tab-content row justify-content-center" id="login_inno">
 
@@ -293,8 +291,7 @@
                         <ul>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-                            <li><i class="fa fa-angle-right"></i> <a href="https://twitter.com/nitrourkela?s=17">NITR
-                                    Twitter</a></li>
+                            <li><i class="fa fa-angle-right"></i> <a href="https://twitter.com/nitrourkela?s=17">NITR Twitter</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
                             <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
                         </ul>
