--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ h6 {
   right: 0;
   transition: all 0.5s;
   z-index: 997;
-  background: rgba(6, 12, 34, 0.85);
+  background: rgba(6, 12, 34, 0.9);
 }
 
 #header.header-scrolled,
@@ -473,6 +473,14 @@ h6 {
 #mobile-nav ul .menu-item-active {
   color: #f82249;
 }
+
+/* login button */
+
+#mobile-nav .buy-tickets {
+  background-color: #f82249;
+}
+
+/* ============ */
 
 #mobile-body-overly {
   width: 100%;
@@ -1033,6 +1041,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #venue .venue-gallery img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
   transition: all ease-in-out 0.4s;
 }
 
