edited year of study values

--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -248,12 +248,12 @@
                                 <div class="form-group" style="color:white" id="gender">
                                     <label class="control-label col-sm-6" for="Gender" style="color:white">Year of Study:</label>
                                     <select class="full-width col-sm-12 form-control" id="q6">
-                                <option value="1st Yr">First</option>
-                                <option value="2nd Yr">Second</option>
-                                <option value="3rd Yr">Third</option>
-                                <option value="4th Yr">Fourth</option>
-                                <option value="5th Yr">Fifth</option>
-                                <option value="others">Others</option>
+                                        <option value="first ">First</option>
+                                        <option value="second ">Second</option>
+                                        <option value="third ">Third</option>
+                                        <option value="four ">Fourth</option>
+                                        <option value="fifth ">Fifth</option>
+                                        <option value="others ">others</option>
                             </select>
                                 </div>
 
