--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -66,7 +66,7 @@
             </div>
 
           </li>
-          <li><a href="ISRpage.html">I.S.R</a></li>
+          <!-- <li><a href="ISRpage.html">I.S.R</a></li> -->
           <li><a href="FAQ.html">FAQ</a></li>
           <!-- <li><a href="#hotels">Hotels</a></li>
                   <li><a href="#gallery">Gallery</a></li> -->
