--- a/views/login.html
+++ b/views/login.html
@@ -69,7 +69,7 @@
                         </div>
 
                     </li>
-                    <li><a href="ISRpage.html">I.S.R</a></li>
+                    <!-- <li><a href="ISRpage.html">I.S.R</a></li> -->
                     <li><a href="FAQ.html">FAQ</a></li>
                     <!-- <li><a href="#hotels">Hotels</a></li>
                   <li><a href="#gallery">Gallery</a></li> -->
