--- a/views/participants-admin/admin_panel.html
+++ b/views/participants-admin/admin_panel.html
@@ -12,12 +12,11 @@
             height: 85%;
             width: 100%;
             border-radius: 5px;
-            box-shadow: 0px 3px 8px rgba(0,0,0,0.25);
+            box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.25);
             position: relative;
         }
         
         .y {
-
             text-align: center;
             height: 30px;
             width: 300px;
@@ -29,7 +28,6 @@
         }
         
         .z {
-
             height: 30px;
             width: 100px;
             border: none;
@@ -38,7 +36,6 @@
             border-radius: 3px;
             margin: 20px;
         }
-
     </style>
 </head>
 
@@ -56,9 +53,8 @@
     <!-- include fetchllevent script get the DATA_ARRAY-->
     <script src="../../assets/js/ajax/fetchingParticipantsList.js"></script>
     <div class="container">
-
-    <div class="row">
-        <div class="col-sm-2"><button type="button" class="btn btn-info submit_button" style="margin-top: 2em;">Submit</button>
+        <h2 style="color: red ; text-decoration: underline;"><span style="font-weight: 700;">Note:</span> To search all participants,empty the field and click search !</h2>
+        <div class="row">
         </div>
         <div class="col-sm-8"><br>
             <div class="x">
