innovision in header. culture to pro shows

--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -57,7 +57,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <a href="#intro" class="scrollto"><img src="../../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-        <h1><a href="#main"><span>inno'19</span></a></h1>
+        <h1><a href="#main"><span>innovision'19</span></a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -74,7 +74,7 @@
                 <a href="../eventsSection.html#workshops">Workshops</a>
                 <a href="../eventsSection.html#paidworkshops">Workshops (Paid)</a>
                 <a href="../eventsSection.html#exhibitions">Exhibitions</a>
-                <a href="../eventsSection.html#cultural">Cultural </a>
+                <a href="../eventsSection.html#cultural">Pro Shows</a>
                 <a href="../eventsSection.html#funevents">Fun Events</a>
                 <a href="../eventsSection.html#preinnoevents">Pre-inno Events</a>
                 <a href="../eventsSection.html#special">Special Events</a>
