--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -46,7 +46,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-        <h1><a href="#"><span>inno'19</span></a></h1>
+        <h1><a href="#"><span>innovision'19</span></a></h1>
       </div>
 
       <nav id="nav-menu-container">
@@ -62,7 +62,7 @@
               <a href="#workshops1">Workshops</a>
               <a href="#workshops2">Workshops (Paid)</a>
               <a href="#exhibitions1">Exhibitions</a>
-              <a href="#cultural1">Cultural</a>
+              <a href="#cultural1">Pro Shows</a>
               <a href="#funevents1">Fun Events</a>
               <a href="#preinnoevents1">Pre-inno Events</a>
               <a href="#special1">Special Events</a>
