--- a/views/login.html
+++ b/views/login.html
@@ -48,7 +48,7 @@
                 <!-- Uncomment below if you prefer to use a text logo -->
                 <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="inno logo"
                         title="Innovision'19"></a>
-                <h1><a href="#"><span>inno'19</span></a></h1>
+                <h1><a href="#"><span>innovision'19</span></a></h1>
             </div>
 
             <nav id="nav-menu-container">
@@ -65,7 +65,7 @@
                             <a href="eventsSection.html#workshops1">Workshops</a>
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
-                            <a href="eventsSection.html#cultural1">Cultural</a>
+                            <a href="eventsSection.html#cultural1">Pro Shows</a>
                         	<a href="eventsSection.html#funevents1">Fun Events</a>
                         	<a href="eventsSection.html#preinnoevents1">Pre-inno Events</a>
                         	<a href="eventsSection.html#special1">Special Events</a>
