--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,11 +780,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .info {
     margin-top: 0.35em;
+	text-align: center;
 }
 
 #about .info p {
-    text-align: left;
-}
+	text-align: center;
+	font-size: 15px;
+} 
 
 
 /*--------------------------------------------------------------
@@ -995,41 +997,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #venue .container-fluid {
     margin-bottom: 3px;
-}
-
-#venue .venue-map iframe {
-    width: 100%;
-    height: 100%;
-    min-height: 300px;
-}
-
-#venue .venue-info {
-    background: url("../assets/images/venue-info-bg.jpg") top center no-repeat;
-    background-size: cover;
-    position: relative;
-    padding-top: 60px;
-    padding-bottom: 60px;
-}
-
-#venue .venue-info:before {
-    content: "";
-    background: rgba(13, 20, 41, 0.8);
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-}
-
-#venue .venue-info h3 {
-    font-size: 36px;
-    font-weight: 700;
-    color: #fff;
-}
-
-#venue .venue-info p {
-    color: #fff;
-    margin-bottom: 0;
 }
 
 #venue .venue-gallery-container {
