--- a/views/login.html
+++ b/views/login.html
@@ -136,6 +136,26 @@
 
                             </div>
                         </div>
+                    	
+                    	<br>
+                        <div class="form-group" style="color:white" id="ca_apply">
+                            <label class="control-label col-sm-8" for="" style="color:white">Do you want to register through CA?</label>
+                            <form>
+                                <label> 
+                                    <input type="radio" name="ca_s" value="Yes"> &nbsp; Yes &nbsp; 
+                                </label>
+                                <label> 
+                                    <input type="radio" name="ca_s" value="No"> &nbsp; No &nbsp; 
+                                </label>
+                            </form>
+                        </div>
+                        <div class="form-group" id="ca_id_add">
+                            <label class="control-label col-sm-4" for="Ca_id" style="color:white">CA Id:</label>
+                            <div>
+                                <input type="text" class="form-control" id="enter_ca" placeholder="Enter CA Id" name="enter_ca">
+                            </div>
+                        </div>
+                    
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="college" style="color:white">College:</label>
                             <div>
@@ -399,7 +419,9 @@
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="../assets/js/sweetalert.js"></script>
+<!--     <script src="../assets/js/sweetalert.js"></script> -->
+    <script src="../assets/lib/sweetalert/sweetalert.js"></script>
+
     <script src="../assets/js/ajax/login_registration.js">
     </script>
     <script>
