--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -5,7 +5,7 @@
   min-width: 250px;
     margin-left: -125px;
     background-color: #0e1735;
-    color: #f82249;
+    color: white;
     text-align: center;
     border-radius: 20px;
     padding: 5px;
