--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -328,7 +328,7 @@
                             </div>
                         </div>
     
-                        <div class="form-group">
+<!--                         <div class="form-group">
                             <label class="control-label col-sm-12" style="color:white">Paste the link to your CV folder below.</label>
                             <div class="col-sm-12">
 
@@ -336,7 +336,7 @@
 
                             </div>
                         </div>
-
+ -->
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-12" align="center">
                                 <!--<a href="#about" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br>-->
