some style changes. time showing in schedule changed. harish did some changes in success.php

--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Events Section</title>
+    <title>Campus Ambassador page</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -70,13 +70,13 @@
             <div class="dropdown-content">
               <a href="../eventsSection.html#EventsSection">Event Schedule</a>
                 <a href="../eventsSection.html#flagships">Flagship Events</a>
+                <a href="../eventsSection.html#preinnoevents">Pre-inno Events</a>
                 <a href="../eventsSection.html#events">Events</a>
                 <a href="../eventsSection.html#workshops">Workshops</a>
                 <a href="../eventsSection.html#paidworkshops">Workshops (Paid)</a>
                 <a href="../eventsSection.html#exhibitions">Exhibitions</a>
                 <a href="../eventsSection.html#cultural">Pro Shows</a>
                 <a href="../eventsSection.html#funevents">Fun Events</a>
-                <a href="../eventsSection.html#preinnoevents">Pre-inno Events</a>
                 <a href="../eventsSection.html#special">Special Events</a>
             </div>
 
@@ -103,7 +103,7 @@
         <!--==========================
         Schedule Section
       ============================-->
-        <section  class="section-with-bg" style="    padding: 100px 0 60px 0;">
+        <section  class="section-with-bg" style="padding-top: 100px;">
             <div class="container wow fadeInUp">
                 <div class="section-header">
                     <h2>Campus Ambassador Registration</h2>
@@ -168,7 +168,7 @@
 
             <div style="padding-top:5%;font-family: 'Source Sans Pro', sans-serif;color: black;" id="perks">
 
-        <div class="row" style="text-align: center;margin-top: 0.8em;">
+        <div class="row" style="text-align: center;margin-top: 0.8em; padding-bottom: 1em;">
           <div class="col-md-10 offset-md-1">
  
             <table class="table" style="font-family: 'Quicksand', sans-serif;">
