--- a/views/event/coordinator/admin_panel.html
+++ b/views/event/coordinator/admin_panel.html
@@ -126,6 +126,7 @@
                         <th>Phone Number</th>
                         <th>Email Address</th>
                         <th>Institution</th>
+                        <th>Click to Check-In</th>
                     </tr>
                 </thead>
                 <tbody id="dp">
@@ -141,6 +142,7 @@
             <center>
                 <h1>Checked In List</h1>
             </center>
+            <br>
             <table class="table table-bordered table-responsive table-sc" style="background-color: #3D4C53;color: white;box-shadow: 0px 1px 2px rgba(0,0,0,.2);border-radius: 5px;width:70%;">
                 <thead>
                     <tr>
@@ -150,6 +152,7 @@
                         <th>Phone Number</th>
                         <th>Email Address</th>
                         <th>Institution</th>
+                        <th>Click to Uncheck</th>
                     </tr>
                 </thead>
                 <tbody id="cil">
