minor content change

--- a/views/eventsSection.html
+++ b/views/eventsSection.html
@@ -251,7 +251,7 @@
                 <div class="target" id="cultural1">
 			    	
                 </div>
-                <h3>Cultural</h3>
+                <h3>Pro Shows</h3>
                 
                 <div id="cultural">
                 
