--- a/views/ca/admin/CAList.html
+++ b/views/ca/admin/CAList.html
@@ -28,6 +28,7 @@
                             <th>Email</th>
                             <th>Phone number</th>
                             <th>College</th>
+                        	<th>Under CA</th>
                             <th>Selection status</th>
                             <th>Action</th>
                             
