--- a/views/profile.html
+++ b/views/profile.html
@@ -109,6 +109,7 @@
                     <h3 style="color: white;" id="participant_email"></h3>
                     <h3 style="color: white;" id="participant_college"></h3>
                     <h3 style="color: white;" id="participant_id"></h3>
+                	<h3 style="color: white;" id="participant_ca_id"></h3>
                     <br><br>
 <!--                     <a id="paymentBtn" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br> -->
 <!--                     <h2 id="paidMsg" style="color:white">You have already Paid !</h2> -->
