--- a/views/profile.html
+++ b/views/profile.html
@@ -111,8 +111,8 @@
                     <h3 style="color: white;" id="participant_id"></h3>
                 	<h3 style="color: white;" id="participant_ca_id"></h3>
                     <br><br>
-<!--                     <a id="paymentBtn" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br> -->
-<!--                     <h2 id="paidMsg" style="color:white">You have already Paid !</h2> -->
+                    <a id="paymentBtn" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
+                    <h2 id="paidMsg" style="color:white">You have already Paid !</h2>
                     <button class="about-btn" style="background-color: black;" id="ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
                 </div>
                 <div class="col-md-4">
