--- a/views/ca/index.html
+++ b/views/ca/index.html
@@ -147,9 +147,7 @@
 
                     <br>
 
-                    <li style="font-family: 'Quicksand', sans-serif;color: #888">Can there be more than one CA from a college?<br><span style="display: block;color: black;">Ans.
-                    CA stands for Campus Ambassador. He/she will essentially be the point of contact between Team
-                    Innovision and the college junta.</span></li>
+                    <li style="font-family: 'Quicksand', sans-serif;color: #888">Can there be more than one CA from a college?<br><span style="display: block;color: black;">Ans. Yes, more than one CA is possible.</span></li>
                     <br>
                     <li style="font-family: 'Quicksand', sans-serif;color: #888">Is there any minimum limit on the number
                   of participants from a college?<br><span style="display: block;color: black;">Ans. A minimum number
