forgot password send email

--- a/views/login.html
+++ b/views/login.html
@@ -252,7 +252,7 @@
 
                             <!--<a href="#about" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br>-->
                             <button id="login_button" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
-                            <button id="forgot_password" data-toggle="modal" data-target="#forgotPasswordModal">&nbsp;&nbsp; FORGOT PASSWORD&nbsp;&nbsp;</button>
+                            <button id="forgot_password" class="about-btn" style="color:white" data-toggle="modal" data-target="#forgotPasswordModal">&nbsp;&nbsp; FORGOT PASSWORD&nbsp;&nbsp;</button>
                         </div>
 
                     </div>
