Requirements admin pages frontend done

--- a/views/requirements-admin/eventList.html
+++ b/views/requirements-admin/eventList.html
@@ -1,6 +1,7 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="../../../assets/css/style.css">
+<link rel="stylesheet" href="edit.css".css">
 <script src="../../../assets/lib/jquery/jquery.min.js"></script>
 
 <body style="background-color: #FBC02D">
@@ -9,7 +10,7 @@
         <center>
             <div class="row">
                 <h1 style="display: inline">
-                    <b>Campus Ambassador List</b>
+                    <b>Event List</b>
                 </h1>
                 <button style="float: right" class="btn btn-info logout-button" onclick="location.href = 'index.html'">Logout</button>
             </div>
@@ -25,17 +26,17 @@
                         <tr>
                             <th>#</th>
                             <th>Name</th>
-                            <th>Email</th>
-                            <th>Phone number</th>
-                            <th>College</th>
-                        	<th>Under CA</th>
-                            <th>Selection status</th>
+                            <th>ID</th>
                             <th>Action</th>
-                            
                         </tr>
                     </thead>
                     <tbody>
-                        
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th><a class="req-link" href="editReq.html">Edit Requirements</a></th>
+                        </tr>
                     </tbody>
                 </table>
             </div>
